# esquilax

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/docs/: developers.md
.github/workflows/: pre-merge.yaml  release.yaml
docs/source/: conf.py  examples.rst  getting_started.rst  index.rst  sharp_bits.rst  user_guide.rst
docs/source/examples/: evo_boids.rst  hard_coded_boids.rst  rl_boids.rst
examples/: __init__.py  forest_fire.py  game_of_life.py  opinion_dynamics.py
examples/boids/: __init__.py  evolutionary.py  hard_coded.py  rl.py  updates.py
examples/boids/evolutionary/: env.py  updates.py
src/esquilax/: __init__.py  batch_runner.py  env.py  reductions.py  runner.py  sim.py  typing.py
src/esquilax/evo/: __init__.py  training.py  updates.py
src/esquilax/ml/: __init__.py  common.py  updates.py
src/esquilax/ml/evo/: __init__.py  _import_check.py  strategy.py  training.py  tree_utils.py  types.py
src/esquilax/ml/rl/: __init__.py  _import_check.py  agent.py  agent_state.py  agents.py  environment.py  (+4 more)
src/esquilax/transforms/: __init__.py  _graph.py  _grid.py  _map.py  _space.py
src/esquilax/utils/: __init__.py  functions.py  graph.py  space.py  tree.py
tests/: __init__.py  test_batch_runner.py  test_evo.py  test_examples.py  test_ml.py  test_reductions.py  test_rl.py  test_rl_utils.py  test_runner.py  test_utils.py
tests/test_core/: conftest.py  test_examples.py
tests/test_core/test_transforms/: test_random_edge.py
tests/test_ml/: conftest.py  test_examples.py  test_ml_utils.py  test_rl.py
tests/test_transforms/: test_edge_map.py  test_graph_reduce.py  test_grid.py  test_grid_local.py  test_heighest_weight.py  test_map.py  test_nearest_neighbour.py  test_random_edge.py  test_random_neighbour.py  test_space.py
